# brain_pipe

./: .buildinfo  .gitattributes  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  README.md  cli.html  configuration.html  genindex.html  index.html  objects.inv  pipeline.html  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  search.html  searchindex.js  setup.cfg  tox.ini
.github/workflows/: ci.yaml  pages.yaml  publish.yaml
_sources/: cli.rst.txt  index.rst.txt  pipeline.rst.txt
_sources/api/: full_tree.rst.txt
_static/: custom.css
api/: api.html  full_tree.html
api/_autosummary/: brain_pipe.cli.base.CLI.html  brain_pipe.cli.base.html  brain_pipe.cli.cli_entrypoint.html  brain_pipe.cli.cli_factory.html  brain_pipe.cli.default.DefaultCLI.html  brain_pipe.cli.default.html  brain_pipe.cli.html  brain_pipe.dataloaders.base.DataLoader.html  brain_pipe.dataloaders.base.html  brain_pipe.dataloaders.html  brain_pipe.dataloaders.path.GlobLoader.html  brain_pipe.dataloaders.path.html  brain_pipe.html  brain_pipe.parser.base.Parser.html  brain_pipe.parser.base.html  brain_pipe.parser.file.FileLoadMixin.html  brain_pipe.parser.file.FileParser.html  brain_pipe.parser.file.TemplateFileParser.html  brain_pipe.parser.file.html  brain_pipe.parser.html  brain_pipe.parser.simple_dict.SimpleDictParser.html  brain_pipe.parser.simple_dict.html  brain_pipe.parser.template_text.TemplateTextParser.html  brain_pipe.parser.template_text.html  brain_pipe.parser.text.TextParser.html  brain_pipe.parser.text.html  brain_pipe.parser.yaml.YAMLFileParser.html  brain_pipe.parser.yaml.YAMLMixin.html  brain_pipe.parser.yaml.YAMLTemplateFileParser.html  brain_pipe.parser.yaml.YAMLTextParser.html  brain_pipe.parser.yaml.html  brain_pipe.pipeline.base.Pipeline.html  brain_pipe.pipeline.base.PipelineStep.html  (+110 more)
brain_pipe/: __init__.py
brain_pipe/cli/: base.py  (+2 more)
tests/: __init__.py
(+270 files in other folders)
