[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find={}

[project]
name = "brain_pipe"
description = "My package description"
readme = "README.rst"
requires-python = ">=3.6"
keywords = ["Brain imaging processing", "EEG", "SparrKULee"]
dynamic = ["version"]
dependencies = [
    "brian2",
    "brian2hears",
    "numpy",
    "scipy",
    "mne>=1.3.0",
    "librosa",
    "pyyaml",
    "jinja2"
]

[project.scripts]
brain_pipe = "brain_pipe:cli_entrypoint"