[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find={}

[project]
name = "brain_pipe"
requires-python = ">=3.8"
keywords = ["Brain imaging processing", "EEG", "SparrKULee", "BIDS"]
dependencies = [
    "brian2",
    "brian2hears",
    "numpy",
    "scipy",
    "mne>=1.3.0",
    "librosa",
    "pyyaml",
    "jinja2",
]
version = "0.0.4"
dynamic = ["readme", "description"]

[project.scripts]
brain_pipe = "brain_pipe:cli_entrypoint"

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}
description = {file = "README.md"}